--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 numpy~=1.26.3
-scipy~=1.11.3
+scipy>=1.11.3
 scikit-learn~=1.5.1
 cctbx~=2024.6
-dials~=3.18
+dials>=3.18.1
 matplotlib~=3.9
 gemmi~=0.6.4
 tabulate~=0.9.0
@@ -10,7 +10,7 @@ msgpack-python~=1.0.7
 setuptools~=68.2.2
 
 tensorflow~=2.14
-dxtbx~=3.18.1
+#dxtbx>=3.18.1
 
 openmpi~=5.0.3
-mpi4py~=3.1.6
+mpi4py>=3.1.6
