--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 include auspex/lib/int_lis.so
 include auspex/Helcaraxe_models/*
+include auspex/Helcaraxe_models/final_models/Helcaraxe_Fobs_model.h5
+include auspex/Helcaraxe_models/final_models/Helcaraxe_Iobs_model.h5
 graft auspex/Helcaraxe_models/final_models/Helcaraxe_Fobs_model
 graft auspex/Helcaraxe_models/final_models/Helcaraxe_Fobs_model/variables
 graft auspex/Helcaraxe_models/final_models/Helcaraxe_Iobs_model
