--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ dials>=3.18.1
 matplotlib~=3.9
 gemmi~=0.6.4
 tabulate~=0.9.0
-msgpack-python~=1.0.7
+msgpack-python>=1.0.7
 setuptools~=68.2.2
 
 tensorflow>=2.14
